AC_INIT()
AC_CONFIG_HEADER(mpich-mpid.h)
# ignore --enable-strict and --enable-g
# check for mpproto.h
# (try compile instead?)
AC_CHECK_HEADERS(mpproto.h,pre_req=1,pre_req=0)
if test $pre_req = 0 ; then
    AC_MSG_ERROR([Could not find the header file mpproto.h that is needed
by the ch_mpl device.  Check that you have
IBMs parallel operating environment (POE), which is 
required for this device.])
fi
if test "$MPILIBNAME" = "mpi" ; then 
    AC_MSG_WARN([You should select a name for the MPICH library with
-mpilibname=name_of_library.  Using mpich as the library name.])
    MPILIBNAME="mpich"
fi
# We need to check for gettimeofday in case we are not using the Switch
# timer
AC_HAVE_FUNCS(gettimeofday)

AC_OUTPUT()
