dnl
dnl rcsid = $Header: /home/MPI/servers/master/server/configure.in,v 1.4 1996/12/04 16:50:58 gropp Exp $
dnl
AC_INIT(serv_p4.c)
AC_CONFIG_HEADER(server.h)
AC_PROG_CC
AC_PROG_RANLIB
AC_CHECK_HEADERS(termios.h)
AC_CHECK_HEADERS(fcntl.h)
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(sys/select.h)
AC_CHECK_FUNCS(index rindex)
AC_CHECK_KERBEROS
AC_CHECK_AFS
dnl HAVE_SSL
AC_CHECK_SSL
dnl IWAY
AC_ARG_ENABLE(IWAY, --enable-IWAY support IWAYl,AC_CHECK_IWAY)
AC_CHECK_HEADERS(strings.h string.h)
AC_CHECK_FUNCS(getopt)
AC_CHECK_FUNCS(strerror)
dnl HAVE_BSD_SIGNAL
AC_CHECK_POSIX_SIGNAL
dnl HAVE_UNION_WAIT
if test "$ac_cv_check_posix_signal" = "no" ; then
    AC_CHECK_UNION_WAIT
    AC_FUNC_WAIT3
fi
AC_CHECK_FUNCS(setpgrp)
AC_CHECK_FUNCS(setresuid)

AC_ARG_ENABLE(cflags, --enable-cflags=...   additional flags for c compiler,
    CFLAGS="$CFLAGS $enableval")

AC_SUBST($CC)
AC_OUTPUT(Makefile)
