dnl
dnl rcsid = $Header: /home/MPI/cvsMaster/mpich/mpid/server/configure.in,v 1.6 1998/05/08 14:43:23 gropp Exp $
dnl
dnl Caching is usually WRONG for systems with cross-mounted file systems
dnl (the cache file may correspond to a different system).  Since configure
dnl is not on a performance-critical path, go for robustness over speed.
dnl
define([AC_CACHE_LOAD], )dnl
define([AC_CACHE_SAVE], )dnl
AC_INIT(serv_p4.c)
AC_CONFIG_HEADER(server.h)
AC_PROG_CC
AC_PROG_RANLIB
# Some systems require -lsocket -lnsl (e.g., Solaris)
# Note that the Configure version 2 macro REQUIRES that you provide a 
# function to check with.  This would be ok if the function didn't
# require TWO libraries on some systems!
AC_CHECK_LIB(nsl,xdr_array)
AC_CHECK_LIB(socket,socket)
AC_CHECK_LIB(crypt,crypt,CRYPT_LIBS=-lcrypt)
AC_CHECK_HEADERS(termios.h)
AC_CHECK_HEADERS(fcntl.h)
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(sys/select.h)
AC_CHECK_FUNCS(index rindex)
AC_CHECK_FUNCS(seteuid setresuid)
AC_CHECK_KERBEROS
AC_CHECK_AFS
dnl HAVE_SSL
AC_CHECK_SSL
dnl IWAY
AC_ARG_ENABLE(IWAY, --enable-IWAY support IWAYl,AC_CHECK_IWAY)
AC_CHECK_HEADERS(strings.h string.h)
AC_CHECK_FUNCS(getopt)
AC_CHECK_FUNCS(strerror)
dnl HAVE_BSD_SIGNAL
AC_CHECK_POSIX_SIGNAL
dnl HAVE_UNION_WAIT
if test "$ac_cv_check_posix_signal" = "no" ; then
    AC_CHECK_UNION_WAIT
    AC_FUNC_WAIT3
fi
AC_CHECK_FUNCS(setpgrp)
dnl Check the binding of setpgrp
AC_FUNC_SETPGRP
dnl
dnl There are two incompatible setpgrp functions.  One takes two args, the
dnl other takes zero.
dnl AC_MSG_CHECKING(for number of arguments to setpgrp)
dnl
dnl Really need to have the correct include files with the compilation header
dnl Many systems prototype setpgrp in unistd.h
dnl AC_TRY_COMPILE(
dnl #include <unistd.h>
dnl ,setpgrp(0,0);,two_ok=1,two_ok=0)
dnl if test $two_ok = 1 ; then 
dnl     AC_MSG_RESULT(2)
dnl     AC_DEFINE(SETPGRP_HAS_TWO_ARGS)
dnl else
dnl    AC_MSG_RESULT(0)
dnl fi

AC_ARG_ENABLE(cflags, --enable-cflags=...   additional flags for c compiler,
    CFLAGS="$CFLAGS $enableval")

AC_SUBST($CC)
AC_SUBST(CRYPT_LIBS)dnl
AC_OUTPUT(Makefile)
